<resources>
    <string name="app_name">CredenceTest</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="login">Login</string>
    <string name="fisrt_name">Fisrt Name *</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="last_name">Last Name *</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="birthdate">BirthDate *</string>
    <string name="select_your_birthdate">Select your birthdate</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>