<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.registration.Registration">

    <View
        android:id="@+id/viewCross"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/cross_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/logo_transperent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewCross"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivGallery"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:background="@drawable/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogin"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivGallery">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFirstName"
                style="@style/textStyle"
                android:text="@string/fisrt_name"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtFirstName"
                style="@style/edittextStyle"
                android:hint="@string/enter_your_first_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFirstName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLastName"
                style="@style/textStyle"
                android:text="@string/last_name"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtFirstName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtLastName"
                style="@style/edittextStyle"
                android:hint="@string/enter_your_last_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBirthDate"
                style="@style/textStyle"
                android:text="@string/birthdate"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtLastName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtBirthdate"
                style="@style/edittextStyle"
                android:hint="@string/select_your_birthdate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBirthDate" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                style="@style/textStyle"
                android:text="Email *"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtBirthdate" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                style="@style/edittextStyle"
                android:hint="@string/enter_your_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEmail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPassword"
                style="@style/textStyle"
                android:text="Password *"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtEmail" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                style="@style/edittextStyle"
                android:hint="@string/enter_your_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvConfirmPassword"
                style="@style/textStyle"
                android:text="Confirm Password *"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtPassword" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtConfirmPassword"
                style="@style/edittextStyle"
                android:hint="Enter your confirm password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegistration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorWine"
                android:text="Register"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account?"
                android:textAllCaps="true"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/tvLogin"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnRegistration" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="@color/colorWine"
                android:textAllCaps="true"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvAccount"
                app:layout_constraintTop_toBottomOf="@id/btnRegistration" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>